force-app/main/default/objects/Integration_Log__c/fields/Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>Reference_URL__c</fullName>
    <formula>IF(ISBLANK(Reference_Id__c),&apos;&apos;,HYPERLINK(&apos;/&apos;+Reference_Id__c,&apos;Record&apos;))</formula>
    <label>Reference URL</label>
    <type>Text</type>
</CustomField>