force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EndPoint__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processing_Time_in_MilliSeconds__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>