force-app/main/default/objects/Integration_Log__c/listViews/FERT.listView-meta.xml
<ListView>
    <fullName>FERT</fullName>
    <columns>NAME</columns>
    <columns>End_Date_And_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processing_Time_in_MilliSeconds__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Start_Date_And_Time__c</columns>
    <columns>Reference_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EndPoint__c</field>
        <operation>contains</operation>
        <value>fert</value>
    </filters>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>CALLOUT</value>
    </filters>
    <label>FERT</label>
</ListView>